# log_file_processor

./: .gitignore  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
src/logfp/: cli.py  logger.py  processor.py
tests/: test_cli.py  test_processor.py
